// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle show component 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`ProductTitle show product title from context 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee
  </span>
</div>
`;
